--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -11,7 +11,7 @@
     <form id="taskForm">
       <input type="text" id="title" placeholder="Title" required />
       <input type="text" id="description" placeholder="Description" />
-      <button type="submit">Add Task</button>
+      <button type="submit id="my-button" >Add Task</button>
     </form>
     <ul id="taskList"></ul>
   </div>
